--- a/src/partial/head.html
+++ b/src/partial/head.html
@@ -23,10 +23,8 @@ TODO:
 {{- $fonts := "https://fonts.googleapis.com/icon?family=Material+Icons|Raleway" -}}
 {{- $manifest := "/manifest.json" -}}
 
-        <link rel="preload" href="{{ $fonts }}" as="font" crossorigin="anonymous">
+        <link rel="preload" href="{{ $fonts }}" as="style" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ $fonts }}">
-        <link rel="preload" href="{{ $manifest }}">
-        <link rel="manifest" href="{{ $manifest }}">
 
         <title>{{ $title }}</title>
 
@@ -34,6 +32,7 @@ TODO:
         <meta name="theme-color" content="#15191b">
 
         <link rel="canonical" href="{{ $pageUrl }}">
+        <link rel="manifest" href="{{ $manifest }}">
 
         <!-- icons --> 
         <link rel="icon" href="{{ $icon}}">
