--- a/src/base.css
+++ b/src/base.css
@@ -16,11 +16,12 @@
 body {
   display: grid;
   grid: auto-flow / 1fr minmax(320px, 35em) 1fr;
-  grid-gap: 20vh 2em;
+  grid-gap: 25vh 2em;
   margin: 0 0 10vh 0;
   width: 100%;
 }
 
+article,
 section {
   grid-column: 2 / span 1;
 }
@@ -50,7 +51,7 @@ h2 {
 }
 h3 {
   font: 4vmin var(--sans);
-  grid-area: 1 / 1 / 1 / -1;
+  grid-area: 2 / 1 / 2 / -2;
   place-self: center end;
 }
 
@@ -60,7 +61,7 @@ h4 {
 }
 h5 {
   font: 700 1.25em var(--serif);
-  margin: 1em 0 0.25em 0;
+  margin: 0;
 }
 
 a,
