bring header title upwards

--- a/src/base.css
+++ b/src/base.css
@@ -38,8 +38,8 @@ header {
   display: grid;
   grid: repeat(auto-fill, 10vmin) / repeat(auto-fill, 10vmin);
   grid-column: 1 / span 3;
-  height: 80vh;
-  margin: 10vh 2vw;
+  height: 60vh;
+  margin: 10vh 2vw 0 2vw;
   place-content: center;
 }
 h1 {
