--- a/src/base.css
+++ b/src/base.css
@@ -6,28 +6,29 @@
   --primary: #a06be0;
   --gray: #999;
   --white: #eceff1;
-  --sans: "Archivo", sans-serif;
-  --serif: "Lora", serif;
   background-color: var(--black);
   color: var(--white);
-  font: 20px var(--sans);
+
+  /* --sans: "Archivo", sans-serif; */
+  --mono: "Inconsolata", monospace;
+  --serif: "Lora", serif;
+  font: 20px var(--mono);
 }
 
 /* ===== layout ===== */
 body {
   display: grid;
-  grid: auto-flow / 1fr minmax(320px, 35em) 1fr;
-  grid-gap: 25vh 2em;
+  grid: auto-flow / 1fr minmax(16rem, 35rem) 1fr;
+  grid-gap: 0 1em;
   margin: 0 0 10vh 0;
-  width: 100%;
 }
 
-article,
-section {
+body > * {
   grid-column: 2 / span 1;
 }
 
-picture {
+body > picture,
+body > .gist {
   grid-column: 1 / span 3;
 }
 picture img {
@@ -51,28 +52,27 @@ h2 {
   grid-row: -1 / span 1;
 }
 h3 {
-  font: 4vmin var(--sans);
+  /* font: 4vmin var(--sans); */
   grid-area: 2 / 1 / 2 / -2;
   place-self: center end;
 }
-
-/* ===== style ===== */
 h4 {
-  font: 700 1.563em var(--serif);
+  font: 700 2em var(--mono);
+  margin: 1.5em 0 0.25em 0;
 }
 h5 {
-  font: 700 1.25em var(--serif);
-  margin: 0;
+  font: 700 1.5em var(--mono);
+  margin: 1.5em 0 0.25em 0;
 }
 h6 {
-  font: 700 1em var(--serif);
-  margin: 0;
+  font: 700 1.25em var(--mono);
+  margin: 1.5em 0 0.25em 0;
 }
-
 p {
-  margin-top: 0;
+  margin: 0 0 0.25em 0;
 }
 
+/* ===== style ===== */
 a,
 a:visited {
   color: inherit;
@@ -83,6 +83,7 @@ a:hover {
   color: var(--primary);
   transition: color 0.16s;
 }
+
 header a,
 header a:hover,
 header a:visited {
@@ -109,18 +110,19 @@ blockquote {
   border-left: 1ch solid var(--gray);
 }
 
-dt {
-  font: 700 1em var(--serif);
-  margin: 0.75em 0 0.25em 0;
-}
-dd {
-  font-style: italic;
-}
+/* dt {                          */
+/*   font: 700 1em var(--serif); */
+/*   margin: 0.75em 0 0.25em 0;  */
+/* }                             */
+/* dd {                          */
+/*   font-style: italic;         */
+/* }                             */
 
 mark {
   color: var(--primary);
   background-color: unset;
 }
+time,
 span {
   color: var(--gray);
 }
