--- a/src/blog/template.gohtml
+++ b/src/blog/template.gohtml
@@ -3,7 +3,7 @@
 {{ template "head" . }}
 <title>blog | seankhliao</title>
 
-<h1><a href="https://seankhliao.com">seankhliao</a> / <mark>blog</mark></h1>
+<h1><a href="/">seankhliao</a> / <mark>blog</mark></h1>
 <p>Artisanal, hand-crafted blog posts imbued with delayed regrets</p>
 
 <ul>
