use arrow for gtag

--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -22,7 +22,7 @@
 
 <script>
 window.dataLayer = window.dataLayer || [];
-function gtag() {dataLayer.push(arguments);};
+let gtag = (...a) => dataLayer.push(a)
 gtag("js", new Date());
 gtag("config", "UA-114337586-1");
 /* navigator.serviceWorker && window.addEventListener("load", () => {navigator.serviceWorker.register("./sw.js");}); */
