--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -21,6 +21,7 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 
 <script>
+"use strict";
 window.dataLayer = window.dataLayer || [];
 let gtag = (...a) => dataLayer.push(a)
 gtag("js", new Date());
