wrap css in style

--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -36,6 +36,7 @@ gtag("config", "UA-114337586-1");
 {{ end }}
 
 {{ define "basecss" }}
+<style>
 * {
   box-sizing: border-box;
 }
@@ -170,4 +171,5 @@ time,
 span {
   color: var(--gray);
 }
+</style>
 {{ end }}
