--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -51,13 +51,13 @@ gtag("config", "UA-114337586-1");
   /* --sans: "Archivo", sans-serif; */
   --mono: "Inconsolata", monospace;
   --serif: "Lora", serif;
-  font: 20px var(--mono);
+  font: 18px var(--mono);
 }
 
 /* ===== layout ===== */
 body {
   display: grid;
-  grid: auto-flow / 1fr minmax(14rem, 35rem) 1fr;
+  grid: auto-flow / 1fr minmax(280px, 680px) 1fr;
   grid-gap: 0 1em;
   margin: 0 0 10vh 0;
 }
