--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -57,7 +57,7 @@ gtag("config", "UA-114337586-1");
 /* ===== layout ===== */
 body {
   display: grid;
-  grid: auto-flow / 1fr minmax(280px, 680px) 1fr;
+  grid: auto-flow / 1fr minmax(280px, 840px) 1fr;
   grid-gap: 0 1em;
   margin: 0 0 10vh 0;
 }
@@ -150,15 +150,8 @@ blockquote {
   border-left: 1ch solid var(--gray);
 }
 
-/* dt {                          */
-/*   font: 700 1em var(--serif); */
-/*   margin: 0.75em 0 0.25em 0;  */
-/* }                             */
-/* dd {                          */
-/*   font-style: italic;         */
-/* }                             */
 code {
-  background: rgba(255, 255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.25);
   font: 1em var(--mono);
 }
 
