--- a/src/loader.gohtml
+++ b/src/loader.gohtml
@@ -1,95 +1,60 @@
 {{ define "loader" }}
-<div class="loader">
-  <div class="sk-cube sk-cube1"></div>
-  <div class="sk-cube sk-cube2"></div>
-  <div class="sk-cube sk-cube3"></div>
-  <div class="sk-cube sk-cube4"></div>
-  <div class="sk-cube sk-cube5"></div>
-  <div class="sk-cube sk-cube6"></div>
-  <div class="sk-cube sk-cube7"></div>
-  <div class="sk-cube sk-cube8"></div>
-  <div class="sk-cube sk-cube9"></div>
-</div>
-{{ end }}
-
-{{ define "loader-style" }}
 <style>
-  /* https://tobiasahlin.com/spinkit/ */
   .loader {
-    width: 40px;
-    height: 40px;
-    margin: 100px auto;
+    display: grid;
+    grid-gap: 2px;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    height: 48px;
+    place-items: stretch;
+    width: 48px;
   }
-
-  .loader .sk-cube {
-    width: 33%;
-    height: 33%;
-    background-color: #333;
-    float: left;
-    -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
-    animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+  .loader div {
+    background: #333;
+    animation: loader 1.8s infinite ease-in-out;
   }
-  .loader .sk-cube1 {
-    -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s;
+  .loader div:nth-child(5) {
+    background: #a06be0;
   }
-  .loader .sk-cube2 {
-    -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s;
-  }
-  .loader .sk-cube3 {
-    -webkit-animation-delay: 0.4s;
-    animation-delay: 0.4s;
-  }
-  .loader .sk-cube4 {
-    -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s;
-  }
-  .loader .sk-cube5 {
-    -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s;
-  }
-  .loader .sk-cube6 {
-    -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s;
-  }
-  .loader .sk-cube7 {
-    -webkit-animation-delay: 0s;
+  .loader div:nth-child(7) {
     animation-delay: 0s;
   }
-  .loader .sk-cube8 {
-    -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s;
+  .loader div:nth-child(4),
+  .loader div:nth-child(8) {
+    animation-delay: 0.3s;
   }
-  .loader .sk-cube9 {
-    -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s;
+  .loader div:nth-child(1),
+  .loader div:nth-child(5),
+  .loader div:nth-child(9) {
+    animation-delay: 0.6s;
   }
-
-  @-webkit-keyframes sk-cubeGridScaleDelay {
+  .loader div:nth-child(2),
+  .loader div:nth-child(6) {
+    animation-delay: 0.9s;
+  }
+  .loader div:nth-child(3) {
+    animation-delay: 1.2s;
+  }
+  @keyframes loader {
     0%,
     70%,
     100% {
-      -webkit-transform: scale3D(1, 1, 1);
       transform: scale3D(1, 1, 1);
     }
     35% {
-      -webkit-transform: scale3D(0, 0, 1);
-      transform: scale3D(0, 0, 1);
-    }
-  }
-
-  @keyframes sk-cubeGridScaleDelay {
-    0%,
-    70%,
-    100% {
-      -webkit-transform: scale3D(1, 1, 1);
-      transform: scale3D(1, 1, 1);
-    }
-    35% {
-      -webkit-transform: scale3D(0, 0, 1);
       transform: scale3D(0, 0, 1);
     }
   }
 </style>
+
+<div class="loader">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
 {{ end }}
