--- a/src/loader.gohtml
+++ b/src/loader.gohtml
@@ -5,6 +5,7 @@
     grid-gap: 2px;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
     height: 48px;
+    margin: 5em auto;
     place-items: stretch;
     width: 48px;
   }
