add rule for pre

--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -121,6 +121,7 @@ blockquote {
   border-left: 1ch solid var(--gray);
 }
 
+pre,
 code {
   background: rgba(255, 255, 255, 0.25);
   font: 1em var(--mono);
