--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -123,8 +123,9 @@ blockquote {
 
 pre,
 code {
-  background: rgba(255, 255, 255, 0.25);
+  background: #404040;
   font: 1em var(--mono);
+  overflow-x: scroll;
 }
 
 em,
