--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -121,11 +121,15 @@ blockquote {
   border-left: 1ch solid var(--gray);
 }
 
-pre,
-code {
+pre {
   background: #404040;
   font: 1em var(--mono);
   overflow-x: scroll;
+  padding: 1em;
+}
+code {
+  background: #404040;
+  font: 1em var(--mono);
 }
 
 em,
