--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -146,5 +146,7 @@ time,
 span {
   color: var(--gray);
 }
+/* ===== hide recaptcha ===== */
+.grecaptcha-badge { visibility: hidden; }
 </style>
 {{ end }}
