--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -29,7 +29,7 @@ gtag("config", "UA-114337586-1");
 /* navigator.serviceWorker && window.addEventListener("load", () => {navigator.serviceWorker.register("./sw.js");}); */
 
 grecaptcha.ready(()=> {
-    grecaptcha.render('body', {i
+    grecaptcha.render('body', {
         sitekey:'6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn',
         theme: 'dark'
     });
