remove chevrons for blog listing

--- a/src/blog/template.gohtml
+++ b/src/blog/template.gohtml
@@ -3,6 +3,15 @@
 {{ template "head" . }}
 <title>blog | seankhliao</title>
 
+<style>
+ul {
+    padding: 0;
+}
+ul > li:before {
+    display: none;
+}
+</style>
+
 <h1><a href="/">seankhliao</a> / <mark>blog</mark></h1>
 <p>Artisanal, hand-crafted blog posts imbued with delayed regrets</p>
 
