--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -127,6 +127,9 @@ pre {
   overflow-x: scroll;
   padding: 1em;
 }
+pre::-webkit-scrollbar {
+    display: none;
+}
 code {
   background: #404040;
   font: 1em var(--mono);
