--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
-<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-<!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Lora:700&display=swap">-->
+<link rel="preconnect" href="https://securetoken.googleapis.com" crossorigin>
+<link rel="preconnect" href="https://api.seankhliao.com" crossorigin>
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114337586-1"></script>
 <script defer src="https://www.google.com/recaptcha/api.js?render=6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn"></script>
 
@@ -31,7 +31,6 @@ gtag("config", "UA-114337586-1");
 grecaptcha.ready(()=> {
     grecaptcha.execute('6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn', {
         action: 'pageview'
-
     }).then(token=> {
         fetch('https://api.seankhliao.com/recaptcha.v3', {
             method: 'POST',
