--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -27,17 +27,18 @@ gtag("js", new Date());
 gtag("config", "UA-114337586-1");
 
 /* navigator.serviceWorker && window.addEventListener("load", () => {navigator.serviceWorker.register("./sw.js");}); */
-
-grecaptcha.ready(()=> {
-    grecaptcha.execute('6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn', {
-        action: 'pageview'
-    }).then(token=> {
-        fetch('https://api.seankhliao.com/recaptcha.v3', {
-            method: 'POST',
-            mode: 'cors',
-            body: token
-        }).then(res =>{console.log(res)});
-  });
+window.addEventListener('load', ()=>{
+    grecaptcha.ready(()=> {
+        grecaptcha.execute('6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn', {
+            action: 'pageview'
+        }).then(token=> {
+            fetch('https://api.seankhliao.com/recaptcha.v3', {
+                method: 'POST',
+                mode: 'cors',
+                body: token
+            }).then(res =>{console.log(res)});
+        });
+    });
 });
 </script>
 
