--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
+<link rel="preconnect" href="https://www.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://securetoken.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://api.seankhliao.com" crossorigin>
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114337586-1"></script>
