--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -13,7 +13,7 @@
 <meta name="theme-color" content="#000000">
 <meta name="description" content="{{ .Desc }}">
 
-<link rel="canonical" href="https://seankhliao.com{{ with .URL }}{{ . }}{{ end }}">
+<link rel="canonical" href="{{ .URL }}">
 <link rel="manifest" href="/manifest.json" />
 
 <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
