--- a/src/blog/template.gohtml
+++ b/src/blog/template.gohtml
@@ -12,7 +12,30 @@ ul > li:before {
 }
 </style>
 
-<h1><a href="/">seankhliao</a> / <mark>blog</mark></h1>
+    <header>
+      <h1><a href="/" tabindex="-1">S</a></h1>
+      <h1><a href="/" tabindex="-1">E</a></h1>
+      <h1><a href="/" tabindex="-1">A</a></h1>
+      <h1><a href="/" tabindex="-1">N</a></h1>
+      <h2>
+        <a href="/" tabindex="-1"><mark>K</mark></a>
+      </h2>
+      <h2>
+        <a href="/" tabindex="-1"><mark>.</mark></a>
+      </h2>
+      <h2>
+        <a href="/" tabindex="-1"><mark>H</mark></a>
+      </h2>
+      <h2>
+        <a href="/" tabindex="-1"><mark>.</mark></a>
+      </h2>
+      <h2><a href="/" tabindex="-1">L</a></h2>
+      <h2><a href="/" tabindex="-1">I</a></h2>
+      <h2><a href="/" tabindex="-1">A</a></h2>
+      <h2><a href="/" tabindex="-1">O</a></h2>
+      <h3><a href="/blog"><mark>blog</mark></a></h3>
+    </header>
+
 <p>Artisanal, <mark>hand-crafted</mark> blog posts imbued with delayed <mark>regrets</mark></p>
 
 <ul>
