--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -42,7 +42,7 @@ header {
   grid: repeat(auto-fill, 10vmin) / repeat(auto-fill, 10vmin);
   grid-column: 1 / span 3;
   height: 60vh;
-  margin: 10vh 2vw 0 2vw;
+  margin: 10vh 2vw 10vh 2vw;
   place-content: center;
 }
 h1 {
