--- a/src/blog/template.gohtml
+++ b/src/blog/template.gohtml
@@ -33,7 +33,7 @@ ul > li:before {
       <h2><a href="/" tabindex="-1">I</a></h2>
       <h2><a href="/" tabindex="-1">A</a></h2>
       <h2><a href="/" tabindex="-1">O</a></h2>
-      <h3><a href="/blog"><mark>blog</mark></a></h3>
+      <h3><a href="/blog">b<mark>log</mark></a></h3>
     </header>
 
 <p>Artisanal, <mark>hand-crafted</mark> blog posts imbued with delayed <mark>regrets</mark></p>
