wide code block

--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -124,6 +124,7 @@ blockquote {
 pre {
   background: #404040;
   font: 1em var(--mono);
+  grid-column: 1 / span 3;
   overflow-x: scroll;
   padding: 1em;
 }
