--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -46,7 +46,26 @@ window.addEventListener('load', ()=>{
 {{ template "basecss" }}
 {{ end }}
 
+{{ define "header-name" }}
+<h1><a href="/" tabindex="-1">S</a></h1>
+<h1><a href="/" tabindex="-1">E</a></h1>
+<h1><a href="/" tabindex="-1">A</a></h1>
+<h1><a href="/" tabindex="-1">N</a></h1>
+<h2><a href="/" tabindex="-1"><mark>K</mark></a></h2>
+<h2><a href="/" tabindex="-1"><mark>.</mark></a></h2>
+<h2><a href="/" tabindex="-1"><mark>H</mark></a></h2>
+<h2><a href="/" tabindex="-1"><mark>.</mark></a></h2>
+<h2><a href="/" tabindex="-1">L</a></h2>
+<h2><a href="/" tabindex="-1">I</a></h2>
+<h2><a href="/" tabindex="-1">A</a></h2>
+<h2><a href="/" tabindex="-1">O</a></h2>
+{{ end }}
+
 
 {{ define "foot" }}
-</html>
+<footer>
+    <a href="/privacy">privacy</a>
+    |
+    <a href="/terms">terms</a>
+</footer>
 {{ end }}
