--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -47,18 +47,22 @@ window.addEventListener('load', ()=>{
 {{ end }}
 
 {{ define "header-name" }}
-<h1><a href="/" tabindex="-1">S</a></h1>
-<h1><a href="/" tabindex="-1">E</a></h1>
-<h1><a href="/" tabindex="-1">A</a></h1>
-<h1><a href="/" tabindex="-1">N</a></h1>
-<h2><a href="/" tabindex="-1"><mark>K</mark></a></h2>
-<h2><a href="/" tabindex="-1"><mark>.</mark></a></h2>
-<h2><a href="/" tabindex="-1"><mark>H</mark></a></h2>
-<h2><a href="/" tabindex="-1"><mark>.</mark></a></h2>
-<h2><a href="/" tabindex="-1">L</a></h2>
-<h2><a href="/" tabindex="-1">I</a></h2>
-<h2><a href="/" tabindex="-1">A</a></h2>
-<h2><a href="/" tabindex="-1">O</a></h2>
+<h1>
+    <a href="/">
+        <span>S</span>
+        <span>E</span>
+        <span>A</span>
+        <span>N</span>
+        <em>K</em>
+        <em>.</em>
+        <em>H</em>
+        <em>.</em>
+        <span>L</span>
+        <span>I</span>
+        <span>A</span>
+        <span>O</span>
+    </a>
+</h1>
 {{ end }}
 
 
