--- a/src/basecss.gohtml
+++ b/src/basecss.gohtml
@@ -53,14 +53,14 @@ header h1 *:nth-child(n+5) {
     grid-row: 2 / span 1;
 }
 header h2 {
-    font: 4.5vmin "Inconsolata", monospace;
+    font-size: 4.5vmin;
     grid-area: subhead;
     margin: 0;
     place-self: end;
 }
 header p {
     color: #999;
-    font: 3.5vmin "Inconsolata", monospace;
+    font-size: 3.5vmin;
     grid-area: subtitle;
     place-self: start end;
     text-align: right;
@@ -85,25 +85,24 @@ picture img {
   width: 100%;
 }
 
-h3 {
-  font: 700 2.7em "Inconsolata", monospace;
+h3, h4, h5, h6 {
   margin: 1.5em 0 0.25em 0;
+}
+h3 {
+    font-size: 2.441em;
 }
 h4 {
-  font: 700 2em "Inconsolata", monospace;
-  margin: 1.5em 0 0.25em 0;
+    font-size: 1.953em;
 }
 h5 {
-  font: 700 1.5em "Inconsolata", monospace;
-  margin: 1.5em 0 0.25em 0;
+    font-size: 1.563em;
 }
 h6 {
-  font: 700 1.25em "Inconsolata", monospace;
-  margin: 1.5em 0 0.25em 0;
+    font-size: 1.25em;
 }
 p {
   line-height: 1.5;
-  margin: 0 0 0.25em 0;
+  margin: 0 0 0 1em 0;
 }
 
 
