--- a/src/template.gohtml
+++ b/src/template.gohtml
@@ -222,6 +222,10 @@ ul > li:before {
   position: absolute;
 }
 
+ol > * {
+    line-height: 1.75em;
+}
+
 blockquote {
   margin: 1em;
   padding: 0.25em 1em;
