--- a/templates/head.gohtml
+++ b/templates/head.gohtml
@@ -11,9 +11,9 @@
 <script defer src="https://www.google.com/recaptcha/api.js?render=6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn"></script>
 
 <meta name="theme-color" content="#000000">
-<meta name="description" content="{{ .desc }}">
+<meta name="description" content="{{ .Desc }}">
 
-<link rel="canonical" href="{{ .url }}">
+<link rel="canonical" href="{{ .URL }}">
 <link rel="manifest" href="/manifest.json" />
 
 <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
