--- a/templates/blogpost.gohtml
+++ b/templates/blogpost.gohtml
@@ -1,16 +1,16 @@
 {{ define "blogpost" }}
 
 {{ template "head" . }}
-<title>{{ .title }} | blog | seankhliao</title>
+<title>{{ .Title }} | blog | seankhliao</title>
 
 <header>
     <h2><a href="/blog">b<em>log</em></a></h2>
-    <p><time datetime="{{ .date }}">{{ .date }}</time><p>
+    <p><time datetime="{{ .Date }}">{{ .Date }}</time><p>
     {{ template "header-name" }}
 </header>
 <main>
-    <h3>{{ .title }}</h3>
-    {{ .content }}
+    <h3>{{ .Title }}</h3>
+    {{ .Content }}
 </main>
 
 {{ template "foot" . }}
