--- a/templates/head.gohtml
+++ b/templates/head.gohtml
@@ -10,6 +10,8 @@
 <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114337586-1"></script>
 <script defer src="https://www.google.com/recaptcha/api.js?render=6LcYb6gUAAAAAAugirVvpmFxt8b-j3RfwcNDrchn"></script>
 
+<link rel="alternate" type="application/atom+xml" title="seankhliao.com - Atom Feed" href="https://seankhliao.com/feed.atom" />
+
 <meta name="theme-color" content="#000000">
 <meta name="description" content="{{ .Desc }}">
 
