add link to home

--- a/templates/foot.gohtml
+++ b/templates/foot.gohtml
@@ -1,5 +1,7 @@
 {{ define "foot" }}
 <footer>
+    <a href="/">home</a>
+    |
     <a href="/privacy">privacy</a>
     |
     <a href="/terms">terms</a>
