add link to github

--- a/templates/foot.gohtml
+++ b/templates/foot.gohtml
@@ -5,5 +5,7 @@
     <a href="/privacy">privacy</a>
     |
     <a href="/terms">terms</a>
+    |
+    <a href="https://github.com/seankhliao/com-seankhliao">github</a>
 </footer>
 {{ end }}
