--- a/public/base.css
+++ b/public/base.css
@@ -46,7 +46,7 @@
 body {
   display: grid;
   grid: repeat(2, 20vh) 40vh / 1fr repeat(3, minmax(90px, 280px)) 1fr;
-  gap: 1.5em 1em;
+  gap: 0 1em;
   margin: 0;
   padding: 1vmin;
 
@@ -128,7 +128,7 @@ h6 {
 }
 p {
   line-height: 1.5;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 1em 0;
 }
 
 /* ===== layout footer ===== */
