--- a/internal/static/root/base.css
+++ b/internal/static/root/base.css
@@ -13,8 +13,8 @@
   font-weight: 400;
   font-display: swap;
   src: local("Inconsolata"), local("Inconsolata-Regular"),
-    url(https://seankhliao.com/inconsolata-var.woff2) format("woff2-variations"),
-    url(https://seankhliao.com/inconsolata-400.woff2) format("woff2");
+    url(https://seankhliao.com/static/inconsolata-var.woff2) format("woff2-variations"),
+    url(https://seankhliao.com/static/inconsolata-400.woff2) format("woff2");
 }
 @font-face {
   font-family: "Inconsolata";
@@ -22,24 +22,26 @@
   font-weight: 700;
   font-display: swap;
   src: local("Inconsolata Bold"), local("Inconsolata-Bold"),
-    url(https://seankhliao.com/inconsolata-var.woff2) format("woff2-variations"),
-    url(https://seankhliao.com/inconsolata-700.woff2) format("woff2");
+    url(https://seankhliao.com/static/inconsolata-var.woff2) format("woff2-variations"),
+    url(https://seankhliao.com/static/inconsolata-700.woff2) format("woff2");
 }
 @font-face {
   font-family: "Lora";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Lora"), local("Lora-Regular"), url(https://seankhliao.com/lora-var.woff2) format("woff2-variations"),
-    url(https://seankhliao.com/lora-400.woff2) format("woff2");
+  src: local("Lora"), local("Lora-Regular"),
+    url(https://seankhliao.com/static/lora-var.woff2) format("woff2-variations"),
+    url(https://seankhliao.com/static/lora-400.woff2) format("woff2");
 }
 @font-face {
   font-family: "Lora";
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local("Lora Bold"), local("Lora-Bold"), url(https://seankhliao.com/lora-var.woff2) format("woff2-variations"),
-    url(https://seankhliao.com/lora-700.woff2) format("woff2");
+  src: local("Lora Bold"), local("Lora-Bold"),
+    url(https://seankhliao.com/static/lora-var.woff2) format("woff2-variations"),
+    url(https://seankhliao.com/static/lora-700.woff2) format("woff2");
 }
 
 /* ===== layout general ===== */
